--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "framer-motion": "^11.12.0",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
